fixed mobile view text alignment on gallery page

--- a/gallery.css
+++ b/gallery.css
@@ -18,16 +18,36 @@
 .head-container h1 {
   font-style: italic;
   font-weight: bold;
+  font-size: xx-large;
 }
 
 #cupcake path:nth-child(3) {
   /*display: none;*/
-  animation: scale-up 2s ease-out forwards 3s;
+  animation: scale-up 2s cubic-bezier(0.42, 0, 0.64, 1.26) forwards 3s;
+}
+
+#cupcake path:nth-child(2) {
+  /*display: none;*/
+  animation: scale-up-border 1s cubic-bezier(0.42, 0, 0.75, 1.71) forwards 3s;
 }
 
 #cupcake path:nth-child(1) {
   /*display: none;*/
   animation: fade-in 2s ease-out forwards 3s;
+}
+
+@keyframes scale-up-border {
+  from {
+    fill-opacity: 0;
+    transform: scale(0.2);
+    transform-origin: center;
+  }
+
+  to {
+    fill-opacity: 1;
+    transform: scale(1.0);
+    transform-origin: center;
+  }
 }
 
 @keyframes scale-up {
@@ -48,10 +68,17 @@
 
 @keyframes fade-in {
   from {
-    opacity: 0;
+    fill-opacity: 0;
   }
 
   to {
-    opacity: 1;
+    fill-opacity: 1;
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+  .head-container h1 {
+    font-size: 50px;
   }
 }
